--- a/Tools/datepicker/less/datepicker.less
+++ b/Tools/datepicker/less/datepicker.less
@@ -2,43 +2,63 @@
  * Datepicker for Bootstrap
  *
  * Copyright 2012 Stefan Petre
+ * Improvements by Andrew Rowls
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  */
- 
+
 .datepicker {
-	top: 0;
-	left: 0;
 	padding: 4px;
-	margin-top: 1px;
 	.border-radius(4px);
-	&:before {
-		content: '';
-		display: inline-block;
-		border-left:   7px solid transparent;
-		border-right:  7px solid transparent;
-		border-bottom: 7px solid #ccc;
-		border-bottom-color: rgba(0,0,0,.2);
-		position: absolute;
-		top: -7px;
-		left: 6px;
+	&-inline {
+		width: 220px;
 	}
-	&:after {
-		content: '';
-		display: inline-block;
-		border-left:   6px solid transparent;
-		border-right:  6px solid transparent;
-		border-bottom: 6px solid @white;
-		position: absolute;
-		top: -6px;
-		left: 7px;
+	direction: ltr;
+	&&-rtl {
+		direction: rtl;
+		table tr td span {
+			float: right;
+		}
+	}
+	&-dropdown {
+		top: 0;
+		left: 0;
+		&:before {
+			content: '';
+			display: inline-block;
+			border-left:   7px solid transparent;
+			border-right:  7px solid transparent;
+			border-bottom: 7px solid #ccc;
+			border-bottom-color: rgba(0,0,0,.2);
+			position: absolute;
+			top: -7px;
+			left: 6px;
+		}
+		&:after {
+			content: '';
+			display: inline-block;
+			border-left:   6px solid transparent;
+			border-right:  6px solid transparent;
+			border-bottom: 6px solid @white;
+			position: absolute;
+			top: -6px;
+			left: 7px;
+		}
 	}
 	>div {
 		display: none;
 	}
+	&.days div.datepicker-days {
+		display: block;
+	}
+	&.months div.datepicker-months {
+		display: block;
+	}
+	&.years div.datepicker-years {
+		display: block;
+	}
 	table{
-		width: 100%;
 		margin: 0;
 	}
 	td,
@@ -47,38 +67,92 @@
 		width: 20px;
 		height: 20px;
 		.border-radius(4px);
+
+		border: none;
 	}
-	td {
+	// Inline display inside a table presents some problems with
+	// border and background colors.
+	.table-striped & table tr {
+		td, th {
+			background-color:transparent;
+		}
+	}
+	table tr td {
 		&.day:hover {
 			background: @grayLighter;
 			cursor: pointer;
-		}
-		&.day.disabled {
-			color: @grayLighter;
 		}
 		&.old,
 		&.new {
 			color: @grayLight;
 		}
+		&.disabled,
+		&.disabled:hover {
+			background: none;
+			color: @grayLight;
+			cursor: default;
+		}
+		&.today,
+		&.today:hover,
+		&.today.disabled,
+		&.today.disabled:hover {
+			@todayBackground: lighten(@orange, 30%);
+			.buttonBackground(@todayBackground, spin(@todayBackground, 20));
+			color: #000 !important;
+		}
+		&.range,
+		&.range:hover,
+		&.range.disabled,
+		&.range.disabled:hover {
+			background:@grayLighter;
+			.border-radius(0);
+		}
+		&.range.today,
+		&.range.today:hover,
+		&.range.today.disabled,
+		&.range.today.disabled:hover {
+			@todayBackground: mix(@orange, @grayLighter);
+			.buttonBackground(@todayBackground, spin(@todayBackground, 20));
+			.border-radius(0);
+		}
+		&.selected,
+		&.selected:hover,
+		&.selected.disabled,
+		&.selected.disabled:hover {
+			.buttonBackground(lighten(@grayLight, 10), darken(@grayLight, 10));
+			color: #fff;
+			text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+		}
 		&.active,
-		&.active:hover {
+		&.active:hover,
+		&.active.disabled,
+		&.active.disabled:hover {
 			.buttonBackground(@btnPrimaryBackground, spin(@btnPrimaryBackground, 20));
 			color: #fff;
 			text-shadow: 0 -1px 0 rgba(0,0,0,.25);
 		}
 		span {
 			display: block;
-			width: 47px;
+			width: 23%;
 			height: 54px;
 			line-height: 54px;
 			float: left;
-			margin: 2px;
+			margin: 1%;
 			cursor: pointer;
 			.border-radius(4px);
 			&:hover {
 				background: @grayLighter;
 			}
-			&.active {
+			&.disabled,
+			&.disabled:hover {
+				background:none;
+				color: @grayLight;
+				cursor: default;
+			}
+			&.active,
+			&.active:hover,
+			&.active.disabled,
+			&.active.disabled:hover {
 				.buttonBackground(@btnPrimaryBackground, spin(@btnPrimaryBackground, 20));
 				color: #fff;
 				text-shadow: 0 -1px 0 rgba(0,0,0,.25);
@@ -88,18 +162,13 @@
 			}
 		}
 	}
-	
-	th {
-		&.switch {
-			width: 145px;
-		}
-		&.next,
-		&.prev {
-			font-size: @baseFontSize * 1.5;
-		}
+
+	th.datepicker-switch {
+		width: 145px;
 	}
-	
-	thead tr:first-child th {
+
+	thead tr:first-child th,
+	tfoot tr:first-child th {
 		cursor: pointer;
 		&:hover{
 			background: @grayLighter;
@@ -108,6 +177,18 @@
 	/*.dow {
 		border-top: 1px solid #ddd !important;
 	}*/
+
+	// Basic styling for calendar-week cells
+	.cw {
+		font-size: 10px;
+		width: 12px;
+		padding: 0 2px 0 5px;
+		vertical-align: middle;
+	}
+	thead tr:first-child th.cw {
+		cursor: default;
+		background-color: transparent;
+	}
 }
 .input-append,
 .input-prepend {
@@ -118,5 +199,32 @@
 			width: 16px;
 			height: 16px;
 		}
+	}
+}
+.input-daterange {
+	input {
+		text-align:center;
+	}
+	input:first-child {
+		.border-radius(3px 0 0 3px);
+	}
+	input:last-child {
+		.border-radius(0 3px 3px 0);
+	}
+	.add-on {
+		display: inline-block;
+		width: auto;
+		min-width: 16px;
+		height: @baseLineHeight;
+		padding: 4px 5px;
+		font-weight: normal;
+		line-height: @baseLineHeight;
+		text-align: center;
+		text-shadow: 0 1px 0 @white;
+		vertical-align: middle;
+		background-color: @grayLighter;
+		border: 1px solid #ccc;
+		margin-left:-5px;
+		margin-right:-5px;
 	}
 }
